# trs

./: .envrc  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  communique.toml  default.nix  dist-workspace.toml  flake.nix  hk.pkl  mise.toml  release-plz.toml  trs1
.github/workflows/: ci.yml  license.yml  pinact.yml  release-plz.yml  release.yml
docs/: cli-design.md  plan-codex-support.md  research.md
src/: cli.rs  config.rs  db.rs  display.rs  error.rs  indexer.rs  keys.rs  main.rs  output.rs  search.rs  session.rs  state.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/snapshots/: trs__tui__tests__snapshot_empty_state.snap  trs__tui__tests__snapshot_help_overlay.snap  trs__tui__tests__snapshot_with_results.snap
tests/: integration.rs
tests/fixtures/: sample-session.jsonl
