[package]
name = "trs"
version = "0.4.2"
edition = "2021"
description = "Local-first, full-text search over chat transcripts (trs)"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
is-terminal = "0.4"
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.15"
unicode-width = "0.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
insta = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
